[package]
name = "swim_template"
version = "0.1.0"
edition = "2021"
authors = [" Gabriel Ferrer gjf2a Ian Campbell ianc02"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14"
uart_16550 = "0.2.0"
pic8259 = "0.10"
pc-keyboard = "0.5"
pluggable_interrupt_os = "0.4"
ramdisk = {git = "https://github.com/gjf2a/ramdisk"}
file_system = {git = "https://github.com/ianc02/file_system"} 
#filesystem = {git = "https://github.com/connorescajeda/filesystem---project-9"} 
simple_interp = {git = "https://github.com/gjf2a/simple_interp"}
gc_heap = {git = "https://github.com/ianc02/gc_heap_template"}

[dependencies.num]
version = "0.4"
default-features = false

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam]
version = "0.8"
default-features = false
